# amet

./: .gitignore  AUTHORS  CHANGELOG.md  LICENSE  Makefile  README.md  TODO.md
.github/workflows/: ci.yml
method/: Cargo.toml
method/src/: cli.rs  error.rs  features.rs  genome.rs  io.rs  kmer.rs  lib.rs  main.rs  manifest.rs  reference.rs
method/src/parsers/: allc.rs  bismark.rs  mod.rs  scnmt.rs
method/src/scores/: i_total.rs  jsd.rs  mod.rs
method/tests/: integration.rs  snapshot.rs
method/tests/snapshot/data/: cellA.allc.tsv  cellB.allc.tsv  cellC.allc.tsv  features.bed  tiny.fa
method/tests/snapshot/golden/: cell_feature.tsv  feature.tsv
workflow/: Snakefile
workflow/Rmd/: argelaguet.Rmd  argelaguet_embeddings.Rmd  argelaguet_paper.Rmd  argelaguet_windows.Rmd  crc.Rmd  crc_embeddings.Rmd  crc_windows.Rmd  crc_windows_sce.Rmd  ecker.Rmd  ecker_embeddings.Rmd  ecker_windows.Rmd  fig_argelaguet.Rmd  fig_crc.Rmd  fig_crc_diffentropy.Rmd  fig_ecker.Rmd  simulations_01_sim_data.Rmd  simulations_report.Rmd
workflow/config/: datasets.yaml  datasets_full.yaml  datasets_proto.yaml  sim.yaml
workflow/envs/: bedtools.yml  python.yml  r-tools.yml  r.yml  rust.yml
workflow/rules/: argelaguet.smk  common.smk  crc.smk  ecker.smk  emanuel_sim.smk
workflow/scripts/: apply_fragment_sparsity.R  argelaguet_subset_manifest.py  bricks.R  build_windows_h5.R  compose_ecker_metadata.py  convert_sim.sh  crc_subset_manifest.py  diff_testing.R  driver_utils.R  ecker_subset_manifest.py  eval_acvi_recovery.R  eval_benchmark_summary.R  eval_consensus_perturbation.R  (+44 more)
(+4 files in other folders)
