[package]
name = "amet"
version = "0.1.1"
edition = "2024"
authors = ["Izaskun Mallona <izaskun.mallona.work@gmail.com>"]
license = "GPL-3.0-or-later"
description = "Quantify within- and across-cells epigenetic heterogeneity using single-cell DNA methylation data"
repository = "https://github.com/imallona/amet"
readme = "README.md"
keywords = ["bioinformatics", "methylation", "single-cell", "entropy"]
categories = ["science", "command-line-utilities"]

[[bin]]
name = "amet"
path = "src/main.rs"

[lib]
name = "amet"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
flate2 = "1.0"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
fs2 = "0.4"
tempfile = "3"

[dev-dependencies]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
